removed wire frame

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   }
 </style>
 
-<body class="bg-img custom-text debug">
+<body class="bg-img custom-text">
   <header>
     <div class="container-fluid">
       <div class="row py-5">
